2155 ie fix text wrap flex

--- a/source/css/scss/objects/_icons.scss
+++ b/source/css/scss/objects/_icons.scss
@@ -60,6 +60,8 @@
 
   // The text
   .a-iconText-text {
+    flex: 1; //fix for flexbox wordwrap ie
+
     .a-iconText-text-small {
       display: block;
       margin-bottom: 0;
